fix: hide spoiler arrow on safari

--- a/src/components/pages/PageMain/PageMain.module.css
+++ b/src/components/pages/PageMain/PageMain.module.css
@@ -40,6 +40,10 @@
     cursor: pointer;
     border-radius: 4px;
 
+    &::-webkit-details-marker {
+        display: none;
+    }
+
     &:hover {
         background: var(--control-bg-hover);
     }
